<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/adView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/url_label"
            android:textColor="#171616"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/tv_drawable"
            android:clickable="true"
            android:paddingBottom="16dp"
            android:text="@string/scan_again_some_error_occured"
            android:textColor="#171616"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/copy_btn"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/copy"

                    app:srcCompat="@drawable/ic_baseline_copy_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/copy"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/open_btn"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/open_label"

                    app:srcCompat="@drawable/ic_baseline_open_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/open_label"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/share_btn"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/share_label"

                    app:srcCompat="@drawable/ic_baseline_share_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/share_label"
                    android:textColor="#000000" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:adSize="LARGE_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="visible"
        app:adSize="LARGE_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="visible"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toTopOf="@+id/adView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>